# helix

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  README.md  pyproject.toml
docs/: api.md  tutorial.md
examples/: CMakeLists.txt  Portfolio_LP.cpp  Portfolio_QP.cpp
examples/portfolio/: CMakeLists.txt  Portfolio_LP.cpp  Portfolio_QP.cpp  portfolio_common.hpp
examples/python/: portfolio_lp.py  qp.py
python/: CMakeLists.txt  bindings.cpp
src/: main.cpp
src/helix/: lp_solver.hpp  osqp_solver.cpp  osqp_solver.hpp  portfolio.cpp  portfolio.hpp  simplex.hpp  solver.hpp  types.hpp
tests/: CMakeLists.txt  test_basic.cpp  test_lp.cpp  test_portfolio.cpp  test_qp.cpp  test_utils.hpp
tests/python/: test_portfolio.py  test_solver.py
